# OpencodeAgent

.opencode/: opencode.json
.opencode/agents/: architect.md  debugger.md  dispatcher.md  helper.md  implementer.md  refactorer.md  reviewer.md  tester.md
.opencode/skills/ai-development-workflow/: SKILL.md
.opencode/skills/coding-strategy/: SKILL.md
.opencode/skills/cpp-cmake-coding-standards/: SKILL.md
.opencode/skills/cpp-project-template/: SKILL.md
.opencode/skills/cpp-project-template/template/: .gitignore  CMakeLists.txt  CMakePresets.json
.opencode/skills/cpp-project-template/template/3rd/: CMakeLists.txt
.opencode/skills/cpp-project-template/template/examples/: CMakeLists.txt
.opencode/skills/cpp-project-template/template/examples/hello_world/: main.cpp
.opencode/skills/cpp-project-template/template/ext/: CMakeLists.txt
.opencode/skills/cpp-project-template/template/include/__project_name__/: __project_name__.h
.opencode/skills/cpp-project-template/template/src/: CMakeLists.txt  __project_name__.cpp  pch.cpp  pch.h
.opencode/skills/cpp-project-template/template/tests/: CMakeLists.txt
.opencode/skills/cpp-project-template/template/tests/test_core/: main.cpp
.opencode/skills/project-scaffolding/: SKILL.md
.opencode/skills/python-style/: SKILL.md
.opencode/skills/testing-strategy/: SKILL.md
